runs environment variables in .bashrc